--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -10,15 +10,15 @@
             <div class="col-lg-12">
                 <div class="ibox">
                     <div class="ibox-title">
-                        <h5>Wizard with Validation</h5>
+                        <h5>3 passos</h5>
                         {{>iboxTools}}
                     </div>
                     <div class="ibox-content">
                         <h2>
-                            Validation Wizard Form
+                            Criar Porquinhos
                         </h2>
                         <p>
-                            This example show how to use Steps with jQuery Validation plugin.
+                            Em apenas 3 passos tem o seu Porquinho pronto!
                         </p>
 
                         <form id="form" action="#" class="wizard-big">
