--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -35,14 +35,40 @@
                                             <label>Nome Beneficiario*</label>
                                             <input id="NomeBenef" name="NomeBenef" type="text" class="form-control required">
                                         </div>
+
+
                                         <div class="form-group">
                                             <label>Escolha o tipo de evento*</label>
                                             <input id="EventType" name="EventType" type="text" class="form-control required">
                                         </div>
+
+<!-- -->
+                                <div class="form-group">
+                                    <label>Escolha o tipo de evento*</label>
+                                    <div class="panel panel-default">
+                                        <div class="panel-body">
+                                       <div class="btn-group btn-input clearfix">
+                                         <button type="button" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
+                                           <span data-bind="label">Selecione o tipo de evento</span>&nbsp;<span class="caret"></span>
+                                         </button>
+                                         <ul class="dropdown-menu" role="menu">
+                                           <li><a class="glyphicon glyphicon-music"> Anniversário</a></li>
+                                           <li><a class="glyphicon glyphicon-heart-empty"> Solidariedade</a></li>
+                                           <li><a class="glyphicon glyphicon-envelope"> Projectos</a></li>
+                                           <li><a class="glyphicon glyphicon-glass"> Festas</a></li>
+                                            <li><a class="glyphicon glyphicon-tags"> Presentes</a></li>
+                                           <li><a class="glyphicon glyphicon-piggy-bank"> Outros</a></li>
+                                         </ul>
+                                        </div>
+                                        </div>
+                                    </div>
+                                </div>
                                         <div class="form-group">
                                             <label>Adicione a data*</label>
                                             <input id="FinalDate" name="FinalDate" type="text" class="form-control required">
                                         </div>
+
+
                                     </div>
                                     <div class="col-lg-4">
                                         <div class="text-center">
@@ -98,7 +124,6 @@
                                                <label>Como deseja que os seus amigos o paguem</label>
                                                <input id="PaymentType" name="PaymentType" type="text" class="form-control required">
                                      </div>
-
                                  </div>
                                </div>
                             </fieldset>
