--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -28,44 +28,53 @@
                                 <div class="row">
                                     <div class="col-lg-8">
                                         <div class="form-group">
+                                            <label>Escolha o tipo de evento</label>
+                                            <div class="panel panel-default">
+                                                <div class="panel-body">
+                                               <div class="btn-group btn-input clearfix">
+                                                 <button type="button" id="EventType" name="EventType" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
+                                                   <span data-bind="label">Selecione o tipo de evento</span>&nbsp;<span class="caret"></span>
+                                                 </button>
+                                                 <ul class="dropdown-menu" role="menu">
+
+                                                <!--  <select name= "teste">
+                                                <option value = "Anniversário"> Volvo </option>
+                                                <option value = "Anniversário"> Volvo </option>
+                                               </select>
+                                                -->
+                                                   <li><a> Anniversário</a></li>
+                                                   <li><a> Solidariedade</a></li>
+                                                   <li><a> Projectos</a></li>
+                                                   <li><a> Festas</a></li>
+                                                   <li><a> Presentes</a></li>
+                                                   <li><a> Outros</a></li>
+                                                 </ul>
+                                                </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="form-group">
                                             <label>Nome do Porkinho *</label>
-                                            <input id="NomePork" name="NomePork" type="text" class="form-control required">
+                                            <input id="NomePork" name="NomePork" type="text" class="form-control required"  placeholder="Presente para o aniversário da Claudinha">
                                         </div>
                                         <div class="form-group">
-                                            <label>Nome Beneficiario*</label>
-                                            <input id="NomeBenef" name="NomeBenef" type="text" class="form-control required">
+                                            <label>Nome Beneficiario *</label>
+                                            <input id="NomeBenef" name="NomeBenef" type="text" class="form-control required" placeholder="Claudinha">
                                         </div>
-
 
                                         <div class="form-group">
-                                            <label>Escolha o tipo de evento*</label>
-                                            <input id="EventType" name="EventType" type="text" class="form-control required">
-                                        </div>
-
-<!-- -->
-                                <div class="form-group">
-                                    <label>Escolha o tipo de evento*</label>
-                                    <div class="panel panel-default">
-                                        <div class="panel-body">
-                                       <div class="btn-group btn-input clearfix">
-                                         <button type="button" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
-                                           <span data-bind="label">Selecione o tipo de evento</span>&nbsp;<span class="caret"></span>
-                                         </button>
-                                         <ul class="dropdown-menu" role="menu">
-                                           <li><a class="glyphicon glyphicon-music"> Anniversário</a></li>
-                                           <li><a class="glyphicon glyphicon-heart-empty"> Solidariedade</a></li>
-                                           <li><a class="glyphicon glyphicon-envelope"> Projectos</a></li>
-                                           <li><a class="glyphicon glyphicon-glass"> Festas</a></li>
-                                            <li><a class="glyphicon glyphicon-tags"> Presentes</a></li>
-                                           <li><a class="glyphicon glyphicon-piggy-bank"> Outros</a></li>
-                                         </ul>
-                                        </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                        <div class="form-group">
-                                            <label>Adicione a data*</label>
+                                            <label>Adicione a data *</label>
                                             <input id="FinalDate" name="FinalDate" type="text" class="form-control required">
+                                        </div>
+
+                                        
+                                        <div class="form-group">
+                                          <label for="myInput">Adicione a data de fim *</label>
+                                          <div class="input-group datetimepicker">
+                                             <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
+                                             <input name="FinalDate" id="FinalDate" class="set-due-date form-control" type="text"/>
+                                           </div>
                                         </div>
 
 
@@ -80,7 +89,7 @@
                                 </div>
 
                             </fieldset>
-                            <h1>Profile</h1>
+                            <h1>Personalizar</h1>
                             <fieldset>
                                 <h2>Personalizar</h2>
                                 <div class="row">
@@ -91,17 +100,17 @@
                                         </div>
                                         <div class="form-group">
                                             <label>Escreva uma descrição</label>
-                                            <input id="PorkDescription" name="PorkDescription" type="text" class="form-control required">
+                                            <input id="PorkDescription" name="PorkDescription" type="text" class="form-control required" placeholder="Vamos nos juntar para oferecer a Claudinha um presente, ela merece!">
                                         </div>
                                     </div>
                                     <div class="col-lg-6">
                                         <div class="form-group">
                                             <label>Entre com o valor total para atingir o seu objetivo</label>
-                                            <input id="TotalValue" name="TotalValue" type="text" class="form-control required">
+                                            <input id="TotalValue" name="TotalValue" type="text" class="form-control required" placeholder="100R$">
                                         </div>
                                         <div class="form-group">
                                             <label>Sugerir montante por participante</label>
-                                            <input id="SuggestedValue" name="SuggestedValue" type="text" class="form-control required">
+                                            <input id="SuggestedValue" name="SuggestedValue" type="text" class="form-control required" placeholder="10R$">
                                         </div>
                                     </div>
                                 </div>
@@ -114,7 +123,7 @@
                                   <div class="col-lg-6">
                                       <div class="form-group">
                                         <label>Insira o email dos participantes</label>
-                                        <input id="UsersEmail" name="UsersEmail" type="text" class="form-control required">
+                                        <input id="UsersEmail" name="UsersEmail" type="text" class="form-control required" placeholder="maria@gmail.com, jose@gmail.com">
                                      </div>
                                      <div class="form-group">
                                          <label>Partilhe o link</label>
