--- a/client/templates/new/projectDetail.html
+++ b/client/templates/new/projectDetail.html
@@ -13,6 +13,10 @@
                                 <div class="m-b-md">
                                     <a href="#" class="btn btn-white btn-xs pull-right">Editar Porquinho</a>
                                     <h2>{{NomePork}}</h2>
+
+                                    <h2>{{NomeBenef}}</h2>
+
+                                    <h2>{{EventType}}</h2>
                                 </div>
                             </div>
                         </div>
