--- a/client/templates/new/projectDetail.html
+++ b/client/templates/new/projectDetail.html
@@ -122,7 +122,7 @@
                                         <div class="panel-options">
                                             <ul class="nav nav-tabs">
                                                 <li class="active"><a href="#tab-1" data-toggle="tab">Commentários</a></li>
-                                                <li class=""><a href="#tab-2" data-toggle="tab">Quem participou</a></li>
+                                                <li class=""><a href="#tab-2" data-toggle="tab">Gerir Porkinhos</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -187,26 +187,25 @@
                                                 <table class="table table-striped">
                                                     <thead>
                                                     <tr>
-                                                        <th>Status</th>
-                                                        <th>Title</th>
-                                                        <th>Start Time</th>
-                                                        <th>End Time</th>
-                                                        <th>Comments</th>
+                                                        <th>Situação</th>
+                                                        <th>Convidado</th>
+                                                        <th>Quanto disse que ia dar</th>
+                                                        <th>Quanto deu</th>
+                                                        <th>Como deu o dinheiro</th>
                                                     </tr>
                                                     </thead>
                                                     <tbody>
                                                     <tr>
                                                         <td>
-                                                            <span class="label label-primary"><i class="fa fa-check"></i> Completed</span>
+                                                            <span class="label label-primary"><i class="fa fa-check"></i> Participou</span>
                                                         </td>
                                                         <td>
-                                                            Create project in webapp
+                                                            João
                                                         </td>
                                                         <td>
-                                                            12.07.2014 10:10:1
+                                                            10 R$
                                                         </td>
                                                         <td>
-                                                            14.07.2014 10:16:36
                                                         </td>
                                                         <td>
                                                             <p class="small">
@@ -217,36 +216,35 @@
                                                     </tr>
                                                     <tr>
                                                         <td>
-                                                            <span class="label label-primary"><i class="fa fa-check"></i> Accepted</span>
+                                                            <span class="label label-primary"><i class="fa fa-check"></i> Participou</span>
                                                         </td>
                                                         <td>
-                                                            Various versions
+                                                            Iracema
                                                         </td>
                                                         <td>
-                                                            12.07.2014 10:10:1
+                                                            20 R$
                                                         </td>
                                                         <td>
-                                                            14.07.2014 10:16:36
                                                         </td>
                                                         <td>
                                                             <p class="small">
                                                                 Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
                                                             </p>
                                                         </td>
-
+                                                        <td>
+                                                        </td>
                                                     </tr>
                                                     <tr>
                                                         <td>
-                                                            <span class="label label-primary"><i class="fa fa-check"></i> Sent</span>
+                                                            <span class="label label-primary"><i class="fa fa-check"></i> Participou</span>
                                                         </td>
                                                         <td>
-                                                            There are many variations
+                                                            Shara
                                                         </td>
                                                         <td>
-                                                            12.07.2014 10:10:1
+                                                            10 R$
                                                         </td>
                                                         <td>
-                                                            14.07.2014 10:16:36
                                                         </td>
                                                         <td>
                                                             <p class="small">
@@ -257,16 +255,15 @@
                                                     </tr>
                                                     <tr>
                                                         <td>
-                                                            <span class="label label-primary"><i class="fa fa-check"></i> Reported</span>
+                                                            <span class="label label-primary"><i class="fa fa-check"></i> Participou</span>
                                                         </td>
                                                         <td>
-                                                            Latin words
+                                                            Alberto
                                                         </td>
                                                         <td>
-                                                            12.07.2014 10:10:1
+                                                            20 R$
                                                         </td>
                                                         <td>
-                                                            14.07.2014 10:16:36
                                                         </td>
                                                         <td>
                                                             <p class="small">
@@ -277,16 +274,15 @@
                                                     </tr>
                                                     <tr>
                                                         <td>
-                                                            <span class="label label-primary"><i class="fa fa-check"></i> Accepted</span>
+                                                            <span class="label label-primary"><i class="fa fa-check"></i> Participou</span>
                                                         </td>
                                                        <td>
-                                                            Contrary to popular
+                                                            Joaquim
                                                         </td>
                                                         <td>
-                                                            12.07.2014 10:10:1
+                                                            10 R$
                                                         </td>
                                                         <td>
-                                                            14.07.2014 10:16:36
                                                         </td>
                                                         <td>
                                                             <p class="small">
