New dropdown, falta design

--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -42,13 +42,11 @@
                                                 <option value = "Anniversário"> Volvo </option>
                                                </select>
                                                 -->
-
-                                                   <li name="ani" value="300"><a> Aniversário</a></li>
-                                                   <li name="soli" value="20"><a> Solidariedade</a></li>
-                                                   <li name="projectos" value="1"><a> Projectos</a></li>
-                                                   <li value="1"><a> Festas</a></li>
-                                                   <li value="2"><a> Presentes</a></li>
-                                                   <li value="3"><a> Outros</a></li>
+                                                <select name="options">
+                                                  <option value="carlos">Red</option>
+                                                  <option value="ola">Green</option>
+                                                  <option value="joana">Blue</option>
+                                                </select>
 
                                                  </ul>
                                                 </div>
