--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -42,7 +42,7 @@
                                                 <option value = "Anniversário"> Volvo </option>
                                                </select>
                                                 -->
-                                                <select name="options">
+                                                <select class="select2_demo_1 form-control" name="options">
                                                   <option value="carlos">Red</option>
                                                   <option value="ola">Green</option>
                                                   <option value="joana">Blue</option>
