--- a/client/templates/new/projectDetail.html
+++ b/client/templates/new/projectDetail.html
@@ -311,6 +311,7 @@
                 </div>
             </div>
         </div>
+
         <div class="col-lg-3">
                 <div class="wrapper wrapper-content project-manager">
                     <h4>Project description</h4>
@@ -336,14 +337,72 @@
                         <li><a href=""><i class="fa fa-stack-exchange"></i> Email_from_Alex.mln</a></li>
                         <li><a href=""><i class="fa fa-file"></i> Contract_20_11_2014.docx</a></li>
                     </ul>
+                    <div class="text-center">
+                            <a data-toggle="modal" class="btn btn-primary" href="#modal-form">Participar!!!</a>
+                    </div>
+                    <div id="modal-form" class="modal fade" aria-hidden="true">#modal-form
+                            <div class="modal-dialog">
+                                <div class="modal-content">
+                                    <div class="modal-body">
+                                        <div class="row">
+                                            <div class="col-sm-6 b-r"><h3 class="m-t-none m-b">Sign in</h3>
+
+                                                <p>Sign in today for more expirience.</p>
+
+                                                <form role="form">
+                                                    <div class="form-group"><label>Email</label> <input type="email" placeholder="Enter email" class="form-control"></div>
+                                                    <div class="form-group"><label>Password</label> <input type="password" placeholder="Password" class="form-control"></div>
+                                                    <div>
+                                                        <button class="btn btn-sm btn-primary pull-right m-t-n-xs" type="submit"><strong>Log in</strong></button>
+                                                        <label> <input type="checkbox" class="i-checks"> Remember me </label>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                            <div class="col-sm-6"><h4>Not a member?</h4>
+                                                <p>You can create an account:</p>
+                                                <p class="text-center">
+                                                    <a href=""><i class="fa fa-sign-in big-icon"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     <div class="text-center m-t-md">
-                        <a href="#" class="btn btn-xs btn-primary">Add files</a>
+                        <a href="#" class="btn btn-xs btn-primary">Participar</a>
                         <a href="#" class="btn btn-xs btn-primary">Report contact</a>
 
                     </div>
                 </div>
             </div>
-        
+
     </div>
 
 </template>
+
+<!-- <div class="modal-content">
+                                    <div class="modal-body">
+                                        <div class="row">
+                                            <div class="col-sm-6 b-r"><h3 class="m-t-none m-b">Sign in</h3>
+
+                                                <p>Sign in today for more expirience.</p>
+
+                                                <form role="form">
+                                                    <div class="form-group"><label>Email</label> <input type="email" placeholder="Enter email" class="form-control"></div>
+                                                    <div class="form-group"><label>Password</label> <input type="password" placeholder="Password" class="form-control"></div>
+                                                    <div>
+                                                        <button class="btn btn-sm btn-primary pull-right m-t-n-xs" type="submit"><strong>Log in</strong></button>
+                                                        <label> <div class="icheckbox_square-green" style="position: relative;"><input type="checkbox" class="i-checks" style="position: absolute; opacity: 0;"><ins class="iCheck-helper" style="position: absolute; top: 0%; left: 0%; display: block; width: 100%; height: 100%; margin: 0px; padding: 0px; border: 0px; opacity: 0; background: rgb(255, 255, 255);"></ins></div> Remember me </label>
+                                                    </div>
+                                                </form>
+                                            </div>
+                                            <div class="col-sm-6"><h4>Not a member?</h4>
+                                                <p>You can create an account:</p>
+                                                <p class="text-center">
+                                                    <a href=""><i class="fa fa-sign-in big-icon"></i></a>
+                                                </p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>-->
