--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -29,29 +29,16 @@
                                     <div class="col-lg-8">
                                         <div class="form-group">
                                             <label>Escolha o tipo de evento</label>
-                                            <div id="dropdown1" class="panel panel-default">
-                                                <div class="panel-body">
-                                               <div class="btn-group btn-input clearfix">
-                                                 <button type="button" id="EventType" name="EventType" class="btn btn-default dropdown-toggle form-control" data-toggle="dropdown">
-                                                   <span data-bind="label">Selecione o tipo de evento</span>&nbsp;<span class="caret"></span>
-                                                 </button>
-                                                 <ul class="dropdown-menu" role="menu">
 
-                                                <!--  <select name= "teste">
-                                                <option value = "Anniversário"> Volvo </option>
-                                                <option value = "Anniversário"> Volvo </option>
-                                               </select>
-                                                -->
-                                                <select class="select2_demo_1 form-control" name="options">
-                                                  <option value="carlos">Red</option>
-                                                  <option value="ola">Green</option>
-                                                  <option value="joana">Blue</option>
-                                                </select>
+                                              <select class="select2_demo_1 form-control" id="EventType" name="EventType">
+                                                <option value="Anniversário">Anniversário</option>
+                                                <option value="Solidariedade">Solidariedade</option>
+                                                <option value="Projectos">Projectos</option>
+                                                <option value="Festas">Festas</option>
+                                                <option value="Presentes">Presentes</option>
+                                                <option value="Outros">Outros</option>
+                                              </select>
 
-                                                 </ul>
-                                                </div>
-                                                </div>
-                                            </div>
                                         </div>
 
                                         <div class="form-group" name ="formnome">
