--- a/client/templates/new/projectDetail.html
+++ b/client/templates/new/projectDetail.html
@@ -39,8 +39,8 @@
                             <h4>Nome Porquinho</h4>
                             <small>
                                 Isto é a descrição do Porquinho:
-                                <p>There are many variations of passages of Lorem Ipsum available, but the majority
-                                have suffered alteration in some form Ipsum available There are many variations of passages of Lorem Ipsum available, but the majority.</p>
+                                <p>highof passages of Lorem Ipsum available, but the majority
+                                have suffered alteration in some form Ipsum available highof passages of Lorem Ipsum available, but the majority.</p>
                             </small>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                         <h4>Como Funciona</h4>
 
                             <p>
-                            There are many variations of passages of Lorem Ipsum available, but the majority have
+                            highof passages of Lorem Ipsum available, but the majority have
                             suffered alteration in some form, by injected humour, or randomised words which don't.
                             <br/>
                             <br/>
@@ -248,7 +248,7 @@
                                                         </td>
                                                         <td>
                                                             <p class="small">
-                                                                There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which
+                                                                highof passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which
                                                             </p>
                                                         </td>
 
@@ -314,52 +314,48 @@
 
         <div class="col-lg-3">
                 <div class="wrapper wrapper-content project-manager">
-                    <h4>Project description</h4>
+                    <h4>Como Funciona</h4>
                     <img src="img/zender_logo.png" class="img-responsive">
                     <p class="small">
-                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look
-                        even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything embarrassing
+                        Para participar neste Porquinho é muito simples e gratuito. Basta clicar no botão "Participar" e indicar a forma e a quantia que deseja para contribuir e a gente envia-lhe os dados do organizador.
                     </p>
-                    <p class="small font-bold">
-                        <span><i class="fa fa-circle text-warning"></i> High priority</span>
-                    </p>
-                    <h5>Project tag</h5>
+                    <h5>Este Porquinho é:</h5>
                     <ul class="tag-list" style="padding: 0">
-                        <li><a href=""><i class="fa fa-tag"></i> Zender</a></li>
-                        <li><a href=""><i class="fa fa-tag"></i> Lorem ipsum</a></li>
-                        <li><a href=""><i class="fa fa-tag"></i> Passages</a></li>
-                        <li><a href=""><i class="fa fa-tag"></i> Variations</a></li>
+                        <li><a href=""><i class="fa fa-tag"></i> Simples</a></li>
+                        <li><a href=""><i class="fa fa-tag"></i> Gratuito</a></li>
+                        <li><a href=""><i class="fa fa-tag"></i> Fácil</a></li>
+                        <li><a href=""><i class="fa fa-tag"></i> Seguro</a></li>
+                        <br>
+
                     </ul>
-                    <h5>Project files</h5>
-                    <ul class="list-unstyled project-files">
-                        <li><a href=""><i class="fa fa-file"></i> Project_document.docx</a></li>
-                        <li><a href=""><i class="fa fa-file-picture-o"></i> Logo_zender_company.jpg</a></li>
-                        <li><a href=""><i class="fa fa-stack-exchange"></i> Email_from_Alex.mln</a></li>
-                        <li><a href=""><i class="fa fa-file"></i> Contract_20_11_2014.docx</a></li>
-                    </ul>
-                    <div class="text-center">
-                            <a data-toggle="modal" class="btn btn-primary" href="#modal-form">Participar!!!</a>
+                    <br>
+
+                    <div class="text-center m-t-md">
+                            <br>
+                            <a data-toggle="modal" class="btn btn-primary" href="#modal-form">Participar</a>
                     </div>
                     <div id="modal-form" class="modal fade" aria-hidden="true">#modal-form
                             <div class="modal-dialog">
                                 <div class="modal-content">
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-sm-6 b-r"><h3 class="m-t-none m-b">Sign in</h3>
+                                            <div class="col-sm-6 b-r"><h3 class="m-t-none m-b">Contribua</h3>
 
-                                                <p>Sign in today for more expirience.</p>
+                                                <p>Participe neste Porquinho e diga ao organizador quanto e como quer dar a sua contribuição.</p>
 
                                                 <form role="form">
-                                                    <div class="form-group"><label>Email</label> <input type="email" placeholder="Enter email" class="form-control"></div>
-                                                    <div class="form-group"><label>Password</label> <input type="password" placeholder="Password" class="form-control"></div>
+                                                    <div class="form-group"><label>Nome</label> <input type="name" placeholder="Nome" class="form-control"></div>
+                                                    <div class="form-group"><label>Email</label> <input type="email" placeholder="Email" class="form-control"></div>
+                                                    <div class="form-group"><label>Mensagem para o organizador</label> <input type="mensagem" placeholder="Mensagem optional. Ex: Manuel, hoje a noite dou-te o dinheiro no futebol se não vieres faço transferência." class="form-control"></div>
+                                                    <label> <input type="checkbox" class="i-checks"> Indicar montante que vai dar </label>
+                                                    <p> Selecione como vai dar a sua participação ao Manuel:</P>
                                                     <div>
-                                                        <button class="btn btn-sm btn-primary pull-right m-t-n-xs" type="submit"><strong>Log in</strong></button>
-                                                        <label> <input type="checkbox" class="i-checks"> Remember me </label>
+                                                        <button class="btn btn-sm btn-primary pull-right m-t-n-xs" type="submit"><strong>Avisar como vai participar</strong></button>
                                                     </div>
                                                 </form>
                                             </div>
-                                            <div class="col-sm-6"><h4>Not a member?</h4>
-                                                <p>You can create an account:</p>
+                                            <div class="col-sm-6"><h4>Aqui entra o nome do Porquinho</h4>
+                                                <p>Texto descrição Porquinho ou explicação de como funciona.</p>
                                                 <p class="text-center">
                                                     <a href=""><i class="fa fa-sign-in big-icon"></i></a>
                                                 </p>
@@ -369,11 +365,6 @@
                                 </div>
                             </div>
                         </div>
-                    <div class="text-center m-t-md">
-                        <a href="#" class="btn btn-xs btn-primary">Participar</a>
-                        <a href="#" class="btn btn-xs btn-primary">Report contact</a>
-
-                    </div>
                 </div>
             </div>
 
