--- a/client/templates/new/projectDetail.html
+++ b/client/templates/new/projectDetail.html
@@ -13,10 +13,9 @@
                                 <div class="m-b-md">
                                     <a href="#" class="btn btn-white btn-xs pull-right">Editar Porquinho</a>
                                     <h2>{{NomePork}}</h2>
-
-                                    <h2>{{NomeBenef}}</h2>
-
-                                    <h2>{{EventType}}</h2>
+                                        <ul class="tag-list" style="padding: 0">
+                                            <li><a href=""><i class="fa fa-tag"></i>{{EventType}}</a></li>
+                                        </ul>
                                 </div>
                             </div>
                         </div>
@@ -36,11 +35,10 @@
                 <div class="profile-info">
                     <div class="">
                         <div>
-                            <h4>Nome Porquinho</h4>
+                            <h4>{{NomePork}}</h4>
                             <small>
-                                Isto é a descrição do Porquinho:
-                                <p>highof passages of Lorem Ipsum available, but the majority
-                                have suffered alteration in some form Ipsum available highof passages of Lorem Ipsum available, but the majority.</p>
+                                Descrição do Porquinho:
+                                <p>{{PorkDescription}}</p>
                             </small>
                         </div>
                     </div>
@@ -51,7 +49,7 @@
                     <tbody>
                                         <tr>
                         <td>
-                            <strong>Criador:</strong> Manuel
+                            <strong>Criador:</strong> {{NomeBenef}}
                         </td>
                     </tr>
                     <tr>
@@ -79,7 +77,7 @@
             </div>
             <div class="col-md-3">
                 <small>Objectivo:</small>
-                <h4 class="no-margins">X reais</h4>
+                <h4 class="no-margins">{{TotalValue}} reais</h4>
                 <div id="sparkline1"></div>
             </div>
 
@@ -89,12 +87,7 @@
                         <h4>Como Funciona</h4>
 
                             <p>
-                            highof passages of Lorem Ipsum available, but the majority have
-                            suffered alteration in some form, by injected humour, or randomised words which don't.
-                            <br/>
-                            <br/>
-                            If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't
-                            anything embarrassing
+                            {{PorkDescription}}
                             </p>
 
 
@@ -180,7 +173,6 @@
                                                         </div>
                                                     </div>
                                                 </div>
-
                                             </div>
                                             <div class="tab-pane" id="tab-2">
 
