--- a/client/templates/new/formWizard.html
+++ b/client/templates/new/formWizard.html
@@ -9,14 +9,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="ibox">
-                    <div class="ibox-title">
-                        <h5>3 passos</h5>
-                        {{>iboxTools}}
-                    </div>
                     <div class="ibox-content">
-                        <h2>
-                            Criar Porquinhos
-                        </h2>
+                        <h2>Criar Porquinhos</h2>
                         <p>
                             Em apenas 3 passos tem o seu Porquinho pronto!
                         </p>
