--- a/client/templates/new/projectDetail.html
+++ b/client/templates/new/projectDetail.html
@@ -19,8 +19,6 @@
                                 </div>
                             </div>
                         </div>
-
-
 <!-- -->
 
 <div class="wrapper wrapper-content animated fadeInRight">
@@ -331,26 +329,27 @@
                                 <div class="modal-content">
                                     <div class="modal-body">
                                         <div class="row">
-                                            <div class="col-sm-6 b-r"><h3 class="m-t-none m-b">Contribua</h3>
+                                            <div class="col-sm-12"><h2>Contribua</h2>
 
                                                 <p>Participe neste Porquinho e diga ao organizador quanto e como quer dar a sua contribuição.</p>
 
                                                 <form role="form">
                                                     <div class="form-group"><label>Nome</label> <input type="name" placeholder="Nome" class="form-control"></div>
                                                     <div class="form-group"><label>Email</label> <input type="email" placeholder="Email" class="form-control"></div>
-                                                    <div class="form-group"><label>Mensagem para o organizador</label> <input type="mensagem" placeholder="Mensagem optional. Ex: Manuel, hoje a noite dou-te o dinheiro no futebol se não vieres faço transferência." class="form-control"></div>
-                                                    <label> <input type="checkbox" class="i-checks"> Indicar montante que vai dar </label>
-                                                    <p> Selecione como vai dar a sua participação ao Manuel:</P>
+                                                    <div class="form-group"><label>Mensagem para o organizador</label> <input type="mensagem" placeholder="Mensagem optional. Ex: Manuel, hoje a noite dou-te o dinheiro no futebol se não vieres faço transferência." class="form-control"></div>
+                                                    <div class="form-group"><label>Indicar montante que vai dar</label> <input type="montante" placeholder="10R$" class="form-control"></div>
+                                                    <div class="form-group"><label>Selecione como vai dar a sua participação ao Manuel:</label>
+                                                        <div class="col-sm-10">
+                                                            <div class="i-checks"><label> <input type="radio" value="option1" name="a"> <i></i> Em mãos </label></div>
+                                                        <div class="i-checks"><label> <input type="radio" checked="" value="option2" name="a"> <i></i> Cheque </label></div>
+                                                        <div class="i-checks"><label> <input type="radio" checked="" value="option2" name="a"> <i></i> Transferência </label></div>
+                                                        </div>
+                                                    </div>
                                                     <div>
+                                                        <br>
                                                         <button class="btn btn-sm btn-primary pull-right m-t-n-xs" type="submit"><strong>Avisar como vai participar</strong></button>
                                                     </div>
                                                 </form>
-                                            </div>
-                                            <div class="col-sm-6"><h4>Aqui entra o nome do Porquinho</h4>
-                                                <p>Texto descrição Porquinho ou explicação de como funciona.</p>
-                                                <p class="text-center">
-                                                    <a href=""><i class="fa fa-sign-in big-icon"></i></a>
-                                                </p>
                                             </div>
                                         </div>
                                     </div>
