--- a/client/templates/posts/post_item.html
+++ b/client/templates/posts/post_item.html
@@ -4,12 +4,11 @@
       <tbody>
         <tr>
           <td class="project-people">
-            <a href=""><img alt="image" class="img-circle" src="img/a3.jpg"></a>
+            <a href=""><img alt="image" class="img" src="http://www.joomlaworks.net/images/demos/galleries/abstract/7.jpg"></a>
           </td>
           <td class="project-title">
             <a href="{{pathFor 'projectDetail'}}">{{NomePork}}</a>
             <br/>
-            <small>Created 14.08.2014</small>
           </td>
           <td class="project-completion">
             <small>Completion with: 48%</small>
